cabal-version:       >=1.10

name:                haskell
version:             0.0.0.1
license-file:        LICENSE
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable haskell
  main-is:             day14.hs
  build-depends:       base >=4.14 && <4.15
                     , containers
  default-language:    Haskell2010
